fixing alignment2.0

--- a/styles.css
+++ b/styles.css
@@ -75,12 +75,12 @@ button {
     position: absolute;
     bottom: 0;
     left: 200px;
-    gap: 120px;
+    gap: 299px;
 }
 
 .lift {
     width: 120px;
-    height: 160px;
+    height: 148px;
     background-color: #333;
     border-radius: 5px;
 }
